--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	},
     "require": {
 		"contao/core":">=3.2,<4.0.0",
-		"contao-community-alliance/composer-plugin":"*",
+		"contao-community-alliance/composer-plugin":"*"
     },
    "extra":{
 		"contao": {
